@@ -160,37 +160,26 @@ public class ServiceOfApplicationService {
     public static final String CONFIRMATION_HEADER = "# The application is served";
     public static final String CONFIRMATION_BODY_PREFIX = "### What happens next \n\n The document packs will be served to parties ";
 
-    @Autowired
     private final ServiceOfApplicationEmailService serviceOfApplicationEmailService;
     private final ServiceOfApplicationPostService serviceOfApplicationPostService;
-
-    @Autowired
     private final CaseInviteManager caseInviteManager;
-
     private final C100CaseInviteService c100CaseInviteService;
 
     @Autowired
     @Qualifier("caseSummaryTab")
-    private CaseSummaryTabService caseSummaryTabService;
-
-    @Autowired
+    private final CaseSummaryTabService caseSummaryTabService;
     private final ObjectMapper objectMapper;
     private final UserService userService;
-
     private final FL401CaseInviteService fl401CaseInviteService;
-
     private final DynamicMultiSelectListService dynamicMultiSelectListService;
     private final WelshCourtEmail welshCourtEmail;
-
-    @Autowired
-    ConfidentialDetailsGenerator confidentialDetailsGenerator;
+    private final ConfidentialDetailsGenerator confidentialDetailsGenerator;
 
     private final DgsService dgsService;
 
     @Value("${citizen.url}")
     private String citizenUrl;
 
-    @Autowired
     private final CoreCaseDataService coreCaseDataService;
 
     private final SendAndReplyService sendAndReplyService;
@@ -280,7 +269,7 @@ public class ServiceOfApplicationService {
         throws Exception {
         List<Element<EmailNotificationDetails>> emailNotificationDetails = new ArrayList<>();
         List<Element<BulkPrintDetails>> bulkPrintDetails = new ArrayList<>();
-        String whoIsResponsibleForServing = COURT;
+        String whoIsResponsibleForServing;
         if (CaseCreatedBy.CITIZEN.equals(caseData.getCaseCreatedBy())) {
             whoIsResponsibleForServing = handleNotificationsForCitizenCreatedCase(caseData, authorization,
                                                                                   emailNotificationDetails, bulkPrintDetails);
@@ -305,7 +294,7 @@ public class ServiceOfApplicationService {
         }
         List<Document> docsForLa = getDocsToBeServedToLa(authorization, caseData);
         log.info("Sending notifiction to LA");
-        if (null != docsForLa) {
+        if (!docsForLa.isEmpty()) {
             try {
                 emailNotificationDetails.add(element(serviceOfApplicationEmailService
                                                          .sendEmailNotificationToLocalAuthority(authorization,
@@ -333,11 +322,10 @@ public class ServiceOfApplicationService {
                                                           List<Element<EmailNotificationDetails>> emailNotificationDetails,
                                                           List<Element<BulkPrintDetails>> bulkPrintDetails) {
         //CITIZEN SCENARIO
-        String whoIsResponsibleForServing = "";
+        String whoIsResponsibleForServing = COURT;
         List<Document> c100StaticDocs = serviceOfApplicationPostService.getStaticDocs(authorization, CaseUtils.getCaseTypeOfApplication(caseData));
         if (PrlAppsConstants.C100_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))) {
             log.info("Sending service of application notifications to C100 citizens");
-            //serviceOfApplicationEmailService.sendEmailToC100Applicants(caseData);
             if (YesOrNo.No.equals(caseData.getServiceOfApplication().getSoaServeToRespondentOptions())
                 && (caseData.getServiceOfApplication().getSoaRecipientsOptions() != null)
                 && (!caseData.getServiceOfApplication().getSoaRecipientsOptions().getValue().isEmpty())) {
@@ -358,8 +346,8 @@ public class ServiceOfApplicationService {
         } else {
             if (SoaCitizenServingRespondentsEnum.unrepresentedApplicant
                 .equals(caseData.getServiceOfApplication().getSoaCitizenServingRespondentsOptionsDA())) {
-                List<Document> packEdocs = getNotificationPack(caseData, PrlAppsConstants.E, c100StaticDocs);
-                List<Document> packFdocs = getNotificationPack(caseData, PrlAppsConstants.F, c100StaticDocs);
+                getNotificationPack(caseData, PrlAppsConstants.E, c100StaticDocs);
+                getNotificationPack(caseData, PrlAppsConstants.F, c100StaticDocs);
                 Element<PartyDetails> applicant = Element.<PartyDetails>builder()
                     .id(caseData.getApplicantsFL401().getPartyId())
                     .value(caseData.getApplicantsFL401())
@@ -371,8 +359,8 @@ public class ServiceOfApplicationService {
                     generateAccessCodeLetter(authorization, caseData, applicant,caseInvite,Templates.PRL_LET_ENG_FL401_RE3);
                 }
             } else {
-                List<Document> packCdocs = getNotificationPack(caseData, PrlAppsConstants.C, c100StaticDocs);
-                List<Document> packDdocs = getNotificationPack(caseData, PrlAppsConstants.D, c100StaticDocs);
+                getNotificationPack(caseData, PrlAppsConstants.C, c100StaticDocs);
+                getNotificationPack(caseData, PrlAppsConstants.D, c100StaticDocs);
             }
             log.info("#SOA TO DO ... FL401 citizen created case");
         }
@@ -421,7 +409,7 @@ public class ServiceOfApplicationService {
                 || SoaSolicitorServingRespondentsEnum.courtAdmin
                 .equals(caseData.getServiceOfApplication().getSoaServingRespondentsOptionsCA())) {
                 log.error("#SOA TO DO ... generate J K packs to serve by courtadmin/bailiff");
-                List<Document> packJkDocs = getNotificationPack(caseData, PrlAppsConstants.H, c100StaticDocs);
+                getNotificationPack(caseData, PrlAppsConstants.H, c100StaticDocs);
             }
         } else if (YesOrNo.No.equals(caseData.getServiceOfApplication().getSoaServeToRespondentOptions())
             && (caseData.getServiceOfApplication().getSoaRecipientsOptions() != null)
@@ -430,7 +418,7 @@ public class ServiceOfApplicationService {
             c100StaticDocs = c100StaticDocs.stream().filter(d -> ! d.getDocumentFileName().equalsIgnoreCase(
                 C9_DOCUMENT_FILENAME)).collect(
                 Collectors.toList());
-            log.info("serving applicants or respondents");
+            log.info("serving applicants or respondents non personal");
             List<DynamicMultiselectListElement> selectedApplicants = getSelectedApplicantsOrRespondents(
                 caseData.getApplicants(),
                 caseData.getServiceOfApplication().getSoaRecipientsOptions().getValue()
@@ -476,11 +464,8 @@ public class ServiceOfApplicationService {
 
     private String handleNotificationsDaSolicitorCreatedCase(CaseData caseData, String authorization,
                                                            List<Element<EmailNotificationDetails>> emailNotificationDetails) {
-        String whoIsResponsibleForServing;
         List<Document> staticDocs = serviceOfApplicationPostService.getStaticDocs(authorization, CaseUtils.getCaseTypeOfApplication(caseData));
-
-
-        whoIsResponsibleForServing = caseData.getApplicantsFL401().getRepresentativeFullName();
+        String whoIsResponsibleForServing = caseData.getApplicantsFL401().getRepresentativeFullName();
         log.info("Fl401 case journey for caseId {}", caseData.getId());
         if (SoaSolicitorServingRespondentsEnum.applicantLegalRepresentative.equals(caseData.getServiceOfApplication()
                                                                                        .getSoaServingRespondentsOptionsDA())) {
@@ -550,8 +535,7 @@ public class ServiceOfApplicationService {
         );
         log.info("*** Selected respondents *** {}", selectedRespondents);
         log.info("*** Selected applicants *** {}", selectedApplicants);
-        if (selectedApplicants != null
-            && selectedApplicants.size() > 0) {
+        if (CollectionUtils.isNotEmpty(selectedApplicants)) {
             emailNotificationDetails
                 .addAll(sendNotificationsToCitizenApplicantsC100(
                     authorization, selectedApplicants,
@@ -563,8 +547,7 @@ public class ServiceOfApplicationService {
         log.info(" ** emailnotification {}", emailNotificationDetails);
         log.info(" ** bulk print details {}", bulkPrintDetails);
 
-        if (selectedRespondents != null
-            && selectedRespondents.size() > 0) {
+        if (CollectionUtils.isNotEmpty(selectedRespondents)) {
             emailNotificationDetails
                 .addAll(sendNotificationsToCitizenRespondentsC100(authorization, selectedRespondents,
                                                                   caseData, bulkPrintDetails, c100StaticDocs, true));
@@ -577,8 +560,8 @@ public class ServiceOfApplicationService {
                                                         List<Document> c100StaticDocs) {
         if (SoaCitizenServingRespondentsEnum.unrepresentedApplicant
             .equals(caseData.getServiceOfApplication().getSoaCitizenServingRespondentsOptionsCA())) {
-            List<Document> packLdocs = getNotificationPack(caseData, PrlAppsConstants.L, c100StaticDocs);
-            List<Document> packMdocs = getNotificationPack(caseData, PrlAppsConstants.M, c100StaticDocs);
+            getNotificationPack(caseData, PrlAppsConstants.L, c100StaticDocs);
+            getNotificationPack(caseData, PrlAppsConstants.M, c100StaticDocs);
             for (Element<PartyDetails> applicant : caseData.getApplicants()) {
                 if (!YesNoDontKnow.yes.equals(applicant.getValue().getDoTheyHaveLegalRepresentation())) {
                     sendPostWithAccessCodeLetterToParty(caseData, authorization, new ArrayList<>(), bulkPrintDetails,
@@ -593,9 +576,10 @@ public class ServiceOfApplicationService {
                 }
             }
         } else {
-            List<Document> packJdocs = getNotificationPack(caseData, PrlAppsConstants.J, c100StaticDocs);
-            List<Document> packKdocs = getNotificationPack(caseData, PrlAppsConstants.K, c100StaticDocs);
+            getNotificationPack(caseData, PrlAppsConstants.J, c100StaticDocs);
+            getNotificationPack(caseData, PrlAppsConstants.K, c100StaticDocs);
         }
+        log.info(" {}", emailNotificationDetails);
     }
 
     public Map<String, Object> handleAboutToSubmit(CallbackRequest callbackRequest) throws Exception {
@@ -612,7 +596,6 @@ public class ServiceOfApplicationService {
         }
 
         caseDataMap.put(CASE_INVITES, generateCaseInvitesForParties(caseData));
-        //cleanUpSoaSelections(caseDataMap, true);
         return caseDataMap;
     }
 
@@ -661,11 +644,7 @@ public class ServiceOfApplicationService {
         caseDataMap = CaseUtils.getCaseTypeOfApplication(caseData).equalsIgnoreCase(C100_CASE_TYPE)
                             ? generatePacksForConfidentialCheckC100(callbackRequest.getCaseDetails(), authorisation)
                             : generatePacksForConfidentialCheckFl401(callbackRequest.getCaseDetails(), authorisation);
-        List<Document> docsForLa = getDocsToBeServedToLa(authorisation, caseData);
-        caseDataMap.put(UNSERVED_LA_PACK, SoaPack.builder().packDocument(wrapElements(docsForLa))
-            .servedBy(userService.getUserDetails(authorisation).getFullName())
-            .packCreatedDate(LocalDateTime.now().toString())
-            .build());
+
         cleanUpSoaSelections(caseDataMap, false);
 
         log.info("============= updated case data for confidentialy pack ================> {}", caseDataMap);
@@ -1017,7 +996,7 @@ public class ServiceOfApplicationService {
         return null;
     }
 
-    private List<Document> getNotificationPack(CaseData caseData, String requiredPack, List<Document> staticDocs) {
+    public List<Document> getNotificationPack(CaseData caseData, String requiredPack, List<Document> staticDocs) {
         List<Document> docs = new ArrayList<>();
         switch (requiredPack) {
             case PrlAppsConstants.A:
@@ -1139,8 +1118,7 @@ public class ServiceOfApplicationService {
         docs.addAll(getSoaSelectedOrders(caseData));
         // Annex Y to be excluded
         docs.addAll(staticDocs.stream()
-                        .filter(d -> !d.getDocumentFileName().equalsIgnoreCase(SOA_C9_PERSONAL_SERVICE_FILENAME))
-                        .collect(Collectors.toList()));
+                        .filter(d -> !d.getDocumentFileName().equalsIgnoreCase(SOA_C9_PERSONAL_SERVICE_FILENAME)).toList());
         return docs;
     }
 
@@ -1149,6 +1127,7 @@ public class ServiceOfApplicationService {
         docs.addAll(getCaseDocs(caseData));
         docs.addAll(getDocumentsUploadedInServiceOfApplication(caseData));
         docs.addAll(getSoaSelectedOrders(caseData));
+        log.info("{}",staticDocs);
         return docs;
     }
 
@@ -1157,12 +1136,14 @@ public class ServiceOfApplicationService {
         docs.addAll(getCaseDocs(caseData));
         docs.addAll(getDocumentsUploadedInServiceOfApplication(caseData));
         docs.addAll(getNonC6aOrders(getSoaSelectedOrders(caseData)));
+        log.info("{}",staticDocs);
         return docs;
     }
 
     private List<Document> generatePackN(CaseData caseData, List<Document> staticDocs) {
         List<Document> docs = new ArrayList<>();
         docs.addAll(getC6aIfPresent(getSoaSelectedOrders(caseData)));
+        log.info("{}",staticDocs);
         return docs;
     }
 
@@ -1181,6 +1162,7 @@ public class ServiceOfApplicationService {
         docs.addAll(getCaseDocs(caseData));
         docs.addAll(getDocumentsUploadedInServiceOfApplication(caseData));
         docs.addAll(getSoaSelectedOrders(caseData));
+        log.info("{}",staticDocs);
         return docs;
     }
 
@@ -1189,6 +1171,7 @@ public class ServiceOfApplicationService {
         docs.addAll(getCaseDocs(caseData));
         docs.addAll(getDocumentsUploadedInServiceOfApplication(caseData));
         docs.addAll(getSoaSelectedOrders(caseData));
+        log.info("{}",staticDocs);
         return docs;
     }
 
@@ -1297,6 +1280,7 @@ public class ServiceOfApplicationService {
         docs.addAll(getCaseDocs(caseData));
         docs.addAll(getDocumentsUploadedInServiceOfApplication(caseData));
         docs.addAll(getSoaSelectedOrders(caseData));
+        log.info("{}",staticDocs);
         return docs;
     }
 
@@ -1306,6 +1290,7 @@ public class ServiceOfApplicationService {
         docs.add(caseData.getC8Document());
         docs.addAll(getDocumentsUploadedInServiceOfApplication(caseData));
         docs.addAll(getSoaSelectedOrders(caseData));
+        log.info("{}",staticDocs);
         return docs;
     }
 
@@ -1632,9 +1617,7 @@ public class ServiceOfApplicationService {
         List<Element<CaseInvite>> caseInvites = caseData.getCaseInvites();
         if (caseInvites != null) {
             if (C100_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))) {
-                caseData.getApplicants().forEach(party -> {
-                    caseInvites.add(element(c100CaseInviteService.generateCaseInvite(party, Yes)));
-                });
+                caseData.getApplicants().forEach(party -> caseInvites.add(element(c100CaseInviteService.generateCaseInvite(party, Yes))));
                 caseData.getRespondents().forEach(party -> caseInvites.add(element(c100CaseInviteService.generateCaseInvite(party, No))));
             } else {
                 caseInvites.add(element(fl401CaseInviteService.generateCaseInvite(caseData.getApplicantsFL401(), Yes)));
@@ -1692,16 +1675,22 @@ public class ServiceOfApplicationService {
             } else {
                 caseDataUpdated.put(UNSERVED_RESPONDENT_PACK, null);
             }
-
-            //serving other people in case
-            if (null != caseData.getServiceOfApplication().getSoaOtherParties()
-                && !caseData.getServiceOfApplication().getSoaOtherParties().getValue().isEmpty()) {
-                buildUnservedOthersPack(authorization, caseDataUpdated, caseData, dateCreated, c100StaticDocs);
-            } else {
-                caseDataUpdated.put(UNSERVED_OTHERS_PACK, null);
-            }
         } else if (YesOrNo.Yes.equals(caseData.getServiceOfApplication().getSoaServeToRespondentOptions())) {
             log.error("#SOA TO DO .. Personal Service to be added - for 4 options");
+        }
+        //serving other people in case
+        if (null != caseData.getServiceOfApplication().getSoaOtherParties()
+            && !caseData.getServiceOfApplication().getSoaOtherParties().getValue().isEmpty()) {
+            buildUnservedOthersPack(authorization, caseDataUpdated, caseData, dateCreated, c100StaticDocs);
+        } else {
+            caseDataUpdated.put(UNSERVED_OTHERS_PACK, null);
+        }
+        List<Document> docsForLa = getDocsToBeServedToLa(authorization, caseData);
+        if (CollectionUtils.isNotEmpty(docsForLa)) {
+            caseDataUpdated.put(UNSERVED_LA_PACK, SoaPack.builder().packDocument(wrapElements(docsForLa))
+                .servedBy(userService.getUserDetails(authorization).getFullName())
+                .packCreatedDate(LocalDateTime.now().toString())
+                .build());
         }
         return caseDataUpdated;
     }
@@ -1727,14 +1716,14 @@ public class ServiceOfApplicationService {
             || SoaCitizenServingRespondentsEnum.courtAdmin
                 .equals(caseData.getServiceOfApplication().getSoaCitizenServingRespondentsOptionsCA())) {
             log.error("#SOA TO DO... Personal courtadmin / court bailiff - case created by- citizen/solicitor");
-            List<Document> packCDocs = getNotificationPack(caseData, PrlAppsConstants.C, fl401StaticDocs);
-            List<Document> packDDocs = getNotificationPack(caseData, PrlAppsConstants.D, fl401StaticDocs);
+            getNotificationPack(caseData, PrlAppsConstants.C, fl401StaticDocs);
+            getNotificationPack(caseData, PrlAppsConstants.D, fl401StaticDocs);
 
         } else if (SoaCitizenServingRespondentsEnum.unrepresentedApplicant
             .equals(caseData.getServiceOfApplication().getSoaCitizenServingRespondentsOptionsCA())) {
             log.error("#SOA TO DO... Personal courtadmin / court bailiff - case created by- citizen/solicitor");
-            List<Document> packEDocs = getNotificationPack(caseData, PrlAppsConstants.E, fl401StaticDocs);
-            List<Document> packFDocs = getNotificationPack(caseData, PrlAppsConstants.F, fl401StaticDocs);
+            getNotificationPack(caseData, PrlAppsConstants.E, fl401StaticDocs);
+            getNotificationPack(caseData, PrlAppsConstants.F, fl401StaticDocs);
         }
         return caseDataUpdated;
     }
